:lock: add SecurityManager